--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,1 +1,12 @@
-/* Styles, styles, styles! */
+table {
+    border-collapse: collapse;
+    width: 70%;
+    border: 2px solid #aaaaaa;
+    margin: 10px;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
